alt added and dailyfity project added

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <img
             src="./assets/cryptocurrencies.PNG"
             class="project__picture"
-            alt="dailifity"
+            alt="cryptocurrencies"
           />
           <h3 class="no-margin">cryptocurrencies</h3>
           <div class="project__information">
@@ -201,7 +201,7 @@
           <img
             src="./assets/amiibo.png"
             class="project__picture"
-            alt="dailifity"
+            alt="amiibo"
           />
           <h3 class="no-margin">amiibo</h3>
           <div class="project__information">
@@ -227,7 +227,7 @@
           <img
             src="./assets/blog2.png"
             class="project__picture"
-            alt="dailifity"
+            alt="blog"
           />
           <h3 class="no-margin">
             MF'S Blog <span class="project__wip">WIP</span>
@@ -245,6 +245,35 @@
               target="_blank"
               class="project__btn"
               >Go to MF'S Blog</a
+            >
+          </div>
+        </li>
+        <!-- DailyFity -->
+        <li class="projects__item" data-aos="slide-right" data-aos-delay="50">
+          <div class="project__commingsoon no-show">
+            <span class="project_commingsoon__text">COMMING SOON</span>
+          </div>
+          <img
+            src="./assets/dailyfity.png"
+            class="project__picture"
+            alt="dailyfity"
+          />
+          <h3 class="no-margin">
+            DailyFity <span class="project__wip">WIP</span>
+          </h3>
+          <div class="project__information">
+            <h3 class="project__title project__title--dailifity">
+              DailyFity
+            </h3>
+            <p class="project__description">
+              DailyFity it's a platform that You can use to have an order in
+              your training routine.
+            </p>
+            <a
+              href="https://mfblog.netlify.app/"
+              target="_blank"
+              class="project__btn"
+              >Go to DailyFity</a
             >
           </div>
         </li>
@@ -295,7 +324,7 @@
             Your browser does not support the video tag.
           </video>
           <h3 class="no-margin">
-            Miner light 1.1 <span class="project__wip">WIP</span>
+            Miner light 1.1
           </h3>
           <div class="project__information">
             <h3 class="project__title project__title--dailifity">
