dailyfity app link fixed

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
               your training routine.
             </p>
             <a
-              href="https://mfblog.netlify.app/"
+              href="https://dailyfity.vercel.app/"
               target="_blank"
               class="project__btn"
               >Go to DailyFity</a
